--- a/app/views/common/forms/_simple.html.erb
+++ b/app/views/common/forms/_simple.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full">
-  <div class="border-b border-lightGray-300 pb-12 mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 items-start">
+  <div class="border-b border-lightGray pb-12 mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 items-start">
     <%= yield %>
   </div>
 </div>
