--- a/app/views/factory/formulas/index.html.erb
+++ b/app/views/factory/formulas/index.html.erb
@@ -43,34 +43,58 @@
 
     <%= turbo_frame_tag "formulas_table" do %>
       <div class="inline-block min-w-full py-2 align-middle">
-        <table id="formulas" class="min-w-full divide-y divide-gray-300">
+        <table id="formulas" class="min-w-full divide-y divide-lightGray-900">
           <thead>
             <tr>
-              <th scope="col" class="py-3.5 text-center text-sm font-semibold text-gray-900"><%= sort_link(@q, :id, Formula.human_attribute_name(:id), class: "flex", data: { turbo_action: "advance"}) %></th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:pl-0"><%= sort_link(@q, :name, Formula.human_attribute_name(:name), class: "flex", data: { turbo_action: "advance"}) %></th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sort_link(@q, :abrasive, Formula.human_attribute_name(:abrasive), class: "flex", data: { turbo_action: "advance"}) %></th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sort_link(@q, :grain, Formula.human_attribute_name(:grain), class: "flex", data: { turbo_action: "advance"}) %></th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sort_link(@q, :hardness, Formula.human_attribute_name(:hardness), class: "flex", data: { turbo_action: "advance"}) %></th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sort_link(@q, :porosity, Formula.human_attribute_name(:porosity), class: "flex", data: { turbo_action: "advance"}) %></th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sort_link(@q, :alloy, Formula.human_attribute_name(:alloy), class: "flex", data: { turbo_action: "advance"}) %></th>
+              <th scope="col" class="py-3 text-sm font-semibold text-gray-900">
+                <%= sort_link(@q, :id, Formula.human_attribute_name(:id), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+              </th>
+              <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 sm:pl-0">
+                <%= sort_link(@q, :name, Formula.human_attribute_name(:name), class: "flex", data: { turbo_action: "advance"}) %>
+              </th>
+              <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900">
+                <%= sort_link(@q, :abrasive, Formula.human_attribute_name(:abrasive), class: "flex", data: { turbo_action: "advance"}) %>
+              </th>
+              <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900">
+                <%= sort_link(@q, :grain, Formula.human_attribute_name(:grain), class: "flex", data: { turbo_action: "advance"}) %>
+              </th>
+              <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900">
+                <%= sort_link(@q, :hardness, Formula.human_attribute_name(:hardness), class: "flex", data: { turbo_action: "advance"}) %>
+              </th>
+              <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900">
+                <%= sort_link(@q, :porosity, Formula.human_attribute_name(:porosity), class: "flex", data: { turbo_action: "advance"}) %>
+              </th>
+              <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900">
+                <%= sort_link(@q, :alloy, Formula.human_attribute_name(:alloy), class: "flex", data: { turbo_action: "advance"}) %>
+              </th>
             </tr>
           </thead>
-          <tbody class="divide-y divide-gray-100">
+          <tbody class="divide-y divide-lightGray">
             <% @formulas.each do |formula| %>
               <tr id="<%= dom_id formula %>">
-                <td class="whitespace-nowrap px-3 py-4 text-center text-sm text-gray-500">
+                <td class="whitespace-nowrap px-3 py-3 text-center text-sm text-gray-500">
                   <%= link_to formula.id, factory_formula_path(formula), data: { turbo_frame: "_top" } %>
                 </td>
-                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                <td class="whitespace-nowrap py-3 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
                   <%= link_to factory_formula_path(formula), data: { turbo_frame: "_top" } do %>
                     <span class="sr-only">Ver formula </span><%= formula.name %>
                   <% end %>
                 </td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= formula.abrasive %></td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= formula.grain %></td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= formula.hardness %></td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= formula.porosity %></td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"><%= formula.alloy %></td>
+                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <%= formula.abrasive %>
+                </td>
+                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <%= formula.grain %>
+                </td>
+                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <%= formula.hardness %>
+                </td>
+                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <%= formula.porosity %>
+                </td>
+                <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <%= formula.alloy %>
+                </td>
               </tr>
             <% end %>
           </tbody>
