Add making order index with search, sorting and pagination

--- a/app/views/factory/making_orders/index.html.erb
+++ b/app/views/factory/making_orders/index.html.erb
@@ -23,7 +23,7 @@
         },
         class: "w-full max-w-lg lg:max-w-xs",
       ) do |f| %>
-        <%= f.label :comments_cont, t("placeholders.search_by_name_abrasive_grain_hardness_porosity_alloy"), class: "sr-only" %>
+        <%= f.label :comments_or_making_order_formula_name_cont, t("placeholders.search_by.comments_formula"), class: "sr-only" %>
         <div class="relative text-gray-300 focus-within:text-gray">
           <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
             <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
@@ -31,11 +31,11 @@
             </svg>
           </div>
           <%= f.search_field(
-            :comments_cont,
+            :comments_or_making_order_formula_name_cont,
             autofocus: true,
             autocomplete: "off",
             class: "block w-full rounded-md border-0 ring-0 ring-offset-1 ring-offset-gray bg-white py-1.5 pl-10 pr-3 text-gray-900 focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-blue sm:text-sm/6",
-            placeholder: t("placeholders.search_by_name_abrasive_grain_hardness_porosity_alloy"),
+            placeholder: t("placeholders.search_by.comments_formula"),
           ) %>
         </div>
       <% end %>
@@ -53,10 +53,10 @@
                 <%= sort_link(@q, :created_at, MakingOrder.human_attribute_name(:created_at), class: "flex justify-center", data: { turbo_action: "advance"}) %>
               </th>
               <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :making_order_formula_formula_name, MakingOrder.human_attribute_name(:making_order_formula), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+                <%= sort_link(@q, :making_order_formula_name, MakingOrder.human_attribute_name(:making_order_formula), class: "flex justify-center", data: { turbo_action: "advance"}) %>
               </th>
-              <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :making_order_items_count, MakingOrder.human_attribute_name(:making_order_items), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+              <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group text-center">
+                <%= MakingOrder.human_attribute_name(:making_order_items) %>
               </th>
               <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
                 <%= sort_link(@q, :total_weight, MakingOrder.human_attribute_name(:total_weight), class: "flex justify-center", data: { turbo_action: "advance"}) %>
