--- a/app/views/factory/making_orders/edit.html.erb
+++ b/app/views/factory/making_orders/edit.html.erb
@@ -1,8 +1,25 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing making order</h1>
+<%= render(
+  "common/headings/page",
+  breadcrumbs: [
+    { title: t("navigation.dashboard"), path: factory_dashboard_index_path },
+    { title: t("titles.making_order.index"), path: factory_making_orders_path },
+    { title: @making_order.id, path: factory_making_order_path(@making_order) },
+    { title: t("navigation.edit"), path: edit_factory_making_order_path(@making_order) },
+  ],
+  title: @making_order.id,
+  options_dropdown: [
+    ->(classes, index:) do
+      button_to(
+        t('actions.cancel'),
+        factory_making_order_path(@making_order),
+        method: :delete,
+        data: { turbo_confirm: t("messages.are_you_sure") },
+        class: "#{classes} text-red-500",
+      )
+    end
+  ],
+) %>
 
+<div class="w-full">
   <%= render "form", making_order: @making_order %>
-
-  <%= link_to "Show this making order", @making_order, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to making orders", making_orders_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
