--- a/app/views/common/lists/_description.html.erb
+++ b/app/views/common/lists/_description.html.erb
@@ -4,7 +4,13 @@
   <% items.each do |item| %>
     <div class="px-4 py-6 grid grid-cols-2 md:grid-cols-3 sm:gap-4 sm:px-0">
       <dt class="text-sm font-medium leading-6 text-gray-100"><%= item[:label] %></dt>
-      <dd class="mt-1 text-sm leading-6 text-gray-700 md:col-span-2 sm:mt-0"><%= item[:value] %></dd>
+      <dd class="mt-1 text-sm leading-6 text-gray-700 md:col-span-2 sm:mt-0">
+        <% if item[:block] %>
+          <%= capture(&item[:block]) %>
+        <% else %>
+          <%= item[:value] %>
+        <% end %>
+      </dd>
     </div>
   <% end %>
 </dl>
