--- a/app/views/common/components/_combobox_input.html.erb
+++ b/app/views/common/components/_combobox_input.html.erb
@@ -9,7 +9,7 @@
     <div class="relative">
       <input
         placeholder="<%= placeholder %>"
-        data-action="input->common--combobox-input#filter focus->common--combobox-input#focus"
+        data-action="input->common--combobox-input#filter focus->common--combobox-input#focus keydown->common--combobox-input#keydown"
         data-common--combobox-input-target="input"
         autocomplete="false"
         class="grid w-full cursor-default grid-cols-1 rounded-md py-1.5 pl-3 pr-2 text-left text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-blue sm:text-sm/6"
