--- a/app/views/common/headings/_breadcrumbs.html.erb
+++ b/app/views/common/headings/_breadcrumbs.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (breadcrumbs:) -%>
 <nav class="flex" aria-label="Breadcrumb">
-  <ol role="list" class="flex items-center space-x-4">
+  <ol role="list" class="flex flex-wrap items-center space-x-4">
     <% breadcrumbs.each_with_index do |breadcrumb, index| %>
       <% if index == 0 %>
         <li>
