--- a/app/views/factory/making_orders/_form.html.erb
+++ b/app/views/factory/making_orders/_form.html.erb
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div>
-        <%= form.submit t('actions.save'), :class => 'btn-primary' %>
+        <%= form.submit t("actions.save"), class: "btn-primary" %>
       </div>
     <% end %>
   </div>
