--- a/app/views/common/components/_combobox_input.html.erb
+++ b/app/views/common/components/_combobox_input.html.erb
@@ -5,7 +5,7 @@
   data-common--combobox-input-hidden-class="hidden"
   data-common--combobox-input-selected-class="bg-blue text-white focus:text-white hover:text-white focus:bg-blue-300 hover:bg-blue-300 outline-none"
 >
-  <div class="relative mt-2">
+  <div class="relative">
     <div class="relative">
       <input name="<%= input_name %>" value="<%= input_value %>" type="hidden" data-common--combobox-input-target="valueInput">
       <input
