--- a/app/views/common/components/_combobox_input.html.erb
+++ b/app/views/common/components/_combobox_input.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (placeholder:, input_name:, input_value:, search_value:)  %>
+<%# locals: (input_classes:, input_name:, input_value:, placeholder:, search_value:)  %>
 
 <div
   data-controller="common--combobox-input"
@@ -19,7 +19,7 @@
         "
         data-common--combobox-input-target="searchInput"
         autocomplete="false"
-        class="grid w-full cursor-default grid-cols-1 pr-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6"
+        class="grid w-full cursor-default grid-cols-1 pr-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6 <%= input_classes %>"
         role="combobox"
         type="text"
         aria-expanded="true"
