--- a/app/views/factory/formulas/_form.html.erb
+++ b/app/views/factory/formulas/_form.html.erb
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div>
-        <%= form.button t("actions.save"), class: "btn-primary" %>
+        <%= form.submit t("actions.save"), class: "btn-primary" %>
       </div>
     </div>
     <div class="col-span-6 md:col-span-3 grid grid-cols-1 gap-x-6 gap-y-8">
