--- a/app/views/factory/products/_form.html.erb
+++ b/app/views/factory/products/_form.html.erb
@@ -59,7 +59,7 @@
       </div>
 
       <div>
-        <%= form.button t("actions.save"), class: "btn-primary" %>
+        <%= form.submit t("actions.save"), class: "btn-primary" %>
       </div>
     </div>
   <% end %>
