All things validations

--- a/app/views/common/components/_combobox_input.html.erb
+++ b/app/views/common/components/_combobox_input.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (input_classes:, input_name:, input_value:, placeholder:, search_value:)  %>
+<%# locals: (input_classes: nil, input_name:, input_value:, placeholder: nil, search_value:)  %>
 
 <div
   data-controller="common--combobox-input"
