--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -8,6 +8,12 @@
 
 @layer components {
   .btn-primary {
-    @apply block rounded-md bg-blue px-3 py-2 text-center text-sm font-semibold text-white-500 shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700;
+    @apply block rounded-md bg-blue px-3 py-2 text-center text-sm text-white-500 shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700;
+  }
+  .btn-default {
+    @apply block rounded-md bg-white px-3 py-2 text-center text-sm text-gray-900 shadow-sm hover:bg-lightGray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lightGray-700 ring-1 ring-inset ring-gray-300
+  }
+  .btn-success {
+    @apply block rounded-md bg-green-500 px-3 py-2 text-center text-sm text-white-500 shadow-sm hover:bg-green-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-700;
   }
 }
