--- a/app/views/common/headings/_breadcrumbs.html.erb
+++ b/app/views/common/headings/_breadcrumbs.html.erb
@@ -5,7 +5,7 @@
       <% if index == 0 %>
         <li>
           <div class="flex">
-            <%= link_to breadcrumb[:title], breadcrumb[:path], class: "text-sm font-medium text-gray-500 hover:text-gray-700" %>
+            <%= link_to breadcrumb[:title], breadcrumb[:path], class: "text-sm font-medium text-gray-500 hover:text-gray-700 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lightGray-300" %>
           </div>
         </li>
       <% else %>
@@ -14,7 +14,7 @@
             <svg class="h-5 w-5 flex-shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
               <path fill-rule="evenodd" d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
             </svg>
-            <%= link_to breadcrumb[:title], breadcrumb[:path], class: "ml-4 text-sm font-medium text-gray-500 hover:text-gray-700" %>
+            <%= link_to breadcrumb[:title], breadcrumb[:path], class: "ml-4 text-sm font-medium text-gray-500 hover:text-gray-700 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-lightGray-300" %>
           </div>
         </li>
       <% end %>
