--- a/app/views/common/headings/_page.html.erb
+++ b/app/views/common/headings/_page.html.erb
@@ -9,9 +9,9 @@
       <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"><%= title %></h2>
     </div>
     <% if actions.any? %>
-      <div class="mt-4 flex flex-shrink-0 md:ml-4 md:mt-0">
+      <div class="mt-4 flex flex-shrink-0 md:ml-4 md:mt-0 gap-2">
         <% actions.each do |action| %>
-          <%= button_to action[:label], action[:path], method: action[:method], class: "inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-lightGray-500" %>
+          <%= button_to action[:label], action[:path], method: action[:method], data: action[:data], class: action[:class] || "btn-default" %>
         <% end %>
       </div>
     <% end %>
