--- a/app/views/factory/making_orders/show.html.erb
+++ b/app/views/factory/making_orders/show.html.erb
@@ -7,7 +7,8 @@
   ],
   title: @making_order.id,
   actions: [
-    { label: t("navigation.edit"), path: edit_factory_making_order_path(@making_order), method: :get },
+    { label: t("navigation.print"), path: edit_factory_making_order_path(@making_order), method: :get, class: "btn-success", data: { "controller": "common--print-page"} },
+    { label: t("navigation.edit"), path: edit_factory_making_order_path(@making_order), method: :get, class: "btn-default" },
   ],
 ) %>
 <div class="grid grid-cols-1 xl:grid-cols-2 gap-8 mt-6">
@@ -16,15 +17,23 @@
       "common/lists/description",
       items: [
         { label: MakingOrder.human_attribute_name(:id), value: @making_order.id },
-        { label: MakingOrder.human_attribute_name(:weight_per_round), value: "#{@making_order.weight_per_round}kg" },
+        {
+          label: MakingOrder.human_attribute_name(:formula),
+          block: -> {
+            link_to(factory_formula_path(@making_order.formula), class: "font-semibold") do
+              "#{@making_order.formula_name} (##{@making_order.formula_id})"
+            end
+          },
+        },
+        { label: MakingOrder.human_attribute_name(:weight_per_round), value: "#{@making_order.weight_per_round} kg" },
         { label: MakingOrder.human_attribute_name(:rounds_count), value: @making_order.rounds_count },
         { label: MakingOrder.human_attribute_name(:mixer_capacity), value: @making_order.mixer_capacity },
         { label: MakingOrder.human_attribute_name(:comments), value: @making_order.comments },
-        { label: MakingOrder.human_attribute_name(:state), value: t("#{@making_order.state}", :scope => [:activerecord, :attributes, :making_order, :state_values]) },
+        { label: MakingOrder.human_attribute_name(:state), value: t("#{@making_order.state}", scope: [:activerecord, :attributes, :making_order, :state_values]) },
         { label: MakingOrder.human_attribute_name(:created_at), value: l(@making_order.created_at, format: :long) },
       ]
     ) %>
-    <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+    <div class="border-b border-lightGray-500 py-6 mb-6">
       <h3 class="text-base font-semibold text-gray-900">Historial de cambios</h3>
     </div>
     <ul role="list" class="-mb-8">
@@ -53,7 +62,7 @@
   </div>
   <div class="flow-root">
     <div>
-      <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+      <div class="border-b border-lightGray-500 py-6 mb-6">
         <h3 class="text-base font-semibold text-gray-900"><%= MakingOrder.human_attribute_name(:making_order_items) %></h3>
       </div>
       <div class="grid grid-cols-1 gap-6">
@@ -72,5 +81,38 @@
         </ul>
       </div>
     </div>
+    <div>
+      <div class="border-b border-lightGray-500 py-6 mb-6">
+        <h3 class="text-base font-semibold text-gray-900">Tipo y grano</h3>
+      </div>
+      <%= render(
+        "common/lists/description",
+        items: @making_order.making_order_formula_items.map do |item|
+          {
+            label: item.formula_element_name,
+            value: "#{formula_item_weight_per_round(item.proportion, @making_order.weight_per_round)} kg",
+          }
+        end
+      ) %>
+    </div>
   </div>
 </div>
+
+<% content_for :print_section do %>
+  <div class="printing" style="padding-top:0">
+    <div class="block">
+      <%= render partial: '/factory/making_orders/print/mix', locals: { making_order: @making_order } %>
+    </div>
+    <div class="block">
+      <div class="separator"></div>
+      <%= render partial: '/factory/making_orders/print/pressing', locals: { making_order: @making_order } %>
+    </div>
+    <div class="block">
+      <%= render partial: '/factory/making_orders/print/adjustment', locals: { making_order: @making_order } %>
+    </div>
+    <div class="block last">
+      <div class="separator"></div>
+      <%= render partial: '/factory/making_orders/print/archive', locals: { making_order: @making_order } %>
+    </div>
+  </div>
+<% end %>
